--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,107 +1,11 @@
 <% include header.ejs %>
+<link href='/css/index.css', rel='stylesheet', type='text/css'>
 <style>
-  #title{
-    background-color: rgba(0, 92, 160, 1);
-  }
-  .page-scroll{
-    width: 100%;
-  }
-  .navbar{
-    margin:0;
-    border-radius:0;
-  }
-  .navbar-bracket{
-    display:  block;
-    float:right;
-    overflow: hidden;
-    margin:26px 20px;
-    padding: 0;
-    list-style: none;
-    vertical-align: middle;
-    white-space: nowrap;
-    font-family: Hiragino Sans GB, Microsoft Yahei !important;
-  }
-  .icon a {
-    color: white;
-    margin-left: 40px;
-  }
-  .icon {
-    display: block;
-    float: left;
-    margin-top: 16px;
-    width: 96%;
-    text-align: right;
-    font-weight: 600;
-    color: white;
-    position: fixed;
-  }
-  button, a, .modal {
-    cursor: pointer;
-  }
-  .content{
-    margin-top: 60px;
-  }
-  .api-content{
-    padding: 10px 30px 20px;
-  }
-  .api-item{
-    position: relative;
-    margin-bottom: 20px;
-    border: 1px solid #eee;
-    border-radius: 4px;
-    transition: color .2s ease,border .2s ease;
-    box-sizing: border-box;
-    padding-left: 15px;
-    padding-right: 15px;
-    cursor: pointer;
-  }
-  .api-item-meta{
-    width: 100%;
-    height: 80px;
-    line-height: 80px;
-    box-sizing: border-box;
-    text-align: center;
-  }
-  .create{
-    background-color: rgba(0, 92, 160, 1);
-    border-color: rgba(0, 92, 160, 1);
-    color: white;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-top: 20px;
-  }
-  .create:hover,.create:focus{
-    background-color: rgba(0, 92, 160, 0.9);
-    border-color: rgba(0, 92, 160, 1);
-    color: white;
-  }
-
-  /*modal*/
-  .modal-title{
-    font-size: 20px;
-    font-weight: bold;
-  }
-
-  .close{
-    width: 21px;
-    height: 21px;
-    border-radius: 50%;
-    border:1px solid #000 !important;
-  }
-  .close:hover,.close:focus,.close:active,.close:visited{
-    /*border: 0 !important;*/
-    border:1px solid #000 !important;
-    outline:none !important;
-    box-shadow: none !important;
-  }
-  .modal-body label{
-    font-weight: inherit;
-  }
 </style>
 <body>
   <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation" id="title">
     <div class="navbar-header page-scroll">
-      <div class="logo"></div>
+      <div class="logo">APIMANAGE</div>
       <div class="icon">
         <a href="#intro">平台介绍</a>
         <a href="#about">联系我们</a>
@@ -185,6 +89,14 @@
         console.log(error);
       }
     })
+  })
+
+  //点击项目名称进入项目
+  $(document).on("click",".api-item",function(){
+    var id = $(this).attr("data-id");
+    if(id){
+      window.location.href = "/app?appid="+id;
+    }
   })
 </script>
 </html>
