--- a/views/app.ejs
+++ b/views/app.ejs
@@ -4,7 +4,6 @@
 <style type="text/css">
 </style>
 <body>
-
 <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation" id="title">
   <div class="navbar-header page-scroll">
     <a href="/">
@@ -23,6 +22,10 @@
       <p>API名称:</p>
       <div class="code-content">
         <input type="text" name="app_name" id="appname" placeholder="获取XX信息">
+      </div>
+      <p>API所属类别:</p>
+      <div class="code-content">
+        <input type="text" name="app_name" id="appname" placeholder="轮播图API">
       </div>
       <p>描述:</p>
       <div class="code-content">
@@ -57,10 +60,12 @@
           <input type="text" name="app_name" style="width:150px;" id="appname" placeholder="参数描述">
           <input type="text" name="app_name" style="width:150px;" id="appname" placeholder="参数备注">
           <div class="check">
-            <input type="checkbox" name="quux[1]" id="input-1">
+            <input type="checkbox" name="quux[1]" id="input-1" checked>
             <label for="input-1">必须参数</label>
           </div>
-          
+           <div class="mt-20">
+               <button type="button" class="btn btn-primary create">添加</button>
+           </div>
         </div>
       </div>
       <p>调用示例</p>
