--- a/views/app.ejs
+++ b/views/app.ejs
@@ -2,8 +2,23 @@
 <link href='/css/style.css', rel='stylesheet', type='text/css'>
 <link href="/icheck/icheck.css" rel="stylesheet">
 <style type="text/css">
+  .type-li{
+    padding: 10px 10px;
+    background-color: white;
+    border-bottom: 1px solid #eee;
+    cursor: pointer;
+  }
+  .type-li:first-child{
+    border-top: 1px solid #eee;
+  }
+  .icon-x{
+    float: right;
+    margin-right: 10px;
+    margin-top: 10px;
+    color: red;
+    cursor: pointer;
+  }
 </style>
-<body>
 <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation" id="title">
   <div class="navbar-header page-scroll">
     <a href="/">
@@ -15,32 +30,38 @@
     </div>
   </div>
 </nav>
+<body>
 
 <div class="content">
   <div class="col-sm-10 api-content">
     <section class="sec-content apiactive" id="add" style="display:block">
       <p>API名称:</p>
       <div class="code-content">
-        <input type="text" name="app_name" id="appname" placeholder="获取XX信息">
+        <input type="text" name="api_name" id="api-name" placeholder="获取XX信息">
       </div>
       <p>API所属类别:</p>
       <div class="code-content">
-        <input type="text" name="app_name" id="appname" placeholder="轮播图API">
+        <input type="text" name="app_type" id="api-type" placeholder="轮播图API">
+        <div class="type-list">
+          <!--<div class="type-li">轮播图</div>-->
+          <!--<div class="type-li">轮播图</div>-->
+          <!--<div class="type-li">轮播图</div>-->
+        </div>
       </div>
       <p>描述:</p>
       <div class="code-content">
-        <input type="text" name="app_name" id="appname" placeholder="获取XX的XX详情">
+        <input type="text" name="api_desc" id="api-desc" placeholder="获取XX的XX详情">
       </div>
       <p>URI:</p>
       <div class="code-content">
-        <input type="text" name="app_name" id="appname" placeholder="http://moreapi.leanapp.cn/classtb/getProData">
+        <input type="text" name="api_url" id="api-url" placeholder="http://moreapi.leanapp.cn/classtb/getProData">
       </div>
       <p>HTTP请求方式</p>
       <div class="code-content">
         <!-- Single button -->
         <div class="btn-group">
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="dropdown-text">GET</span>
+            <span class="dropdown-text" id="api-request">GET</span>
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
@@ -52,80 +73,97 @@
       <p>请求参数</p>
       <div class="code-content">
         <div class="parameter-list">
-          <p>depart 学院(eg:计算机学院)</p>
-        </div>
-        <div>
-          <input type="text" name="app_name" style="width:150px;" id="appname" placeholder="参数名">
-          <input type="text" name="app_name" style="width:150px;" id="appname" placeholder="参数类型">
-          <input type="text" name="app_name" style="width:150px;" id="appname" placeholder="参数描述">
-          <input type="text" name="app_name" style="width:150px;" id="appname" placeholder="参数备注">
-          <div class="check">
-            <input type="checkbox" name="quux[1]" id="input-1" checked>
-            <label for="input-1">必须参数</label>
+          <div class="parameter-li">
+            <input type="text" class="para-name"  style="width:150px;"  placeholder="参数名">
+            <input type="text" class="para-type"  style="width:150px;"  placeholder="参数类型">
+            <input type="text" class="para-desc"  style="width:150px;"  placeholder="参数描述">
+            <input type="text" class="para-remark"  style="width:150px;"  placeholder="参数备注">
+            <div class="check">
+              <input type="checkbox" class="para-must"  checked>
+              <label for="input-1">必须参数</label>
+            </div>
+            <div class="iconfont icon-x"></div>
           </div>
-           <div class="mt-20">
-               <button type="button" class="btn btn-primary create">添加</button>
-           </div>
+        </div>
+        <div class="mt-20">
+          <button type="button" class="btn btn-primary add">添加</button>
         </div>
       </div>
       <p>调用示例</p>
       <div class="code-content">
-        <input type="text" name="app_name" id="appname" placeholder="http://moreapi.leanapp.cn/classtb/getProData">
+        <input type="text" id="api-demo" placeholder="http://moreapi.leanapp.cn/classtb/getProData">
       </div>
-      <p>返回结果</p>
-      <div class="code-content">
-        <p>
-          <span class="pln">{</span>
-        </p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;"code":200,</p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;"message":"success",</p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;"data":
-          <span class="pln">{</span>
-        </p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"本部"：
-          <span class="pln">{ ...... }</span>
-        </p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"龙泉"：
-          <span class="pln">{ ...... }</span>
-        </p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          <span class="pln">}</span>
-        </p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;"grade":
-          <span class="pln">{</span>
-        </p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;["2011级","2012级",...]
-        </p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          <span class="pln">}</span>
-        </p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;"class":
-          <span class="pln">{</span>
-        </p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;["01班","02班",...]
-        </p>
-        <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          <span class="pln">}</span>
-        </p>
-        <p>
-          <span class="pln">}</p>
-          <p></section>
-        </div>
+
+      <button type="button" class="btn btn-primary btn-lg mt-50 btn-block create">创建</button>
+    </section>
+  </div>
 </div>
 
 <% include footer.ejs %>
 <script type="text/javascript" src="/icheck/jquery.icheck.min.js"></script>
 <script>
+  //添加参数
+  $(".add").on("click",function () {
+        var li = '<div class="parameter-li mt-20">'+
+                '<input type="text" class="para-name"  style="width:150px;margin-right: 6px" placeholder="参数名">'+
+                '<input type="text" class="para-type"  style="width:150px;margin-right: 6px" placeholder="参数类型">'+
+                '<input type="text" class="para-desc"  style="width:150px;margin-right: 6px" placeholder="参数描述">'+
+                '<input type="text" class="para-remark"  style="width:150px;margin-right: 6px" placeholder="参数备注">'+
+                '<div class="check">'+
+                '<input type="checkbox" class="para-must"  checked>'+
+                '<label for="input-1">必须参数</label>'+
+                '</div>'+
+                '<div class="iconfont icon-x"></div>'+
+                '</div>';
+        $(".parameter-list").append(li);
+        $('.check input').iCheck({
+            checkboxClass: 'icheckbox_square-blue',
+            radioClass: 'iradio-blue'
+        });
+  })
+  $(document).on("click",".icon-x",function(){
+    $(this).parent().remove();
+  })
+
+  //点击创建生成
+  $(".create").on("click",function () {
+      //获取API名称
+      var api_name = $("#api-name").val();
+      //API所属类别:
+      var api_type = $("#api-type").val();
+      //描述:
+      var api_desc = $("#api-desc").val();
+      //URI:
+      var api_url = $("#api-url").val();
+      //HTTP请求方式
+      var api_request = $("#api-request").text();
+      //请求参数
+      var api_para = [];
+      $(".parameter-li").each(function (i,v) {
+          var api_para_li = {
+              para_name:$(this).children(".para-name").val(),
+              para_type:$(this).children(".para-type").val(),
+              para_desc:$(this).children(".para-desc").val(),
+              para_remark:$(this).children(".para-remark").val(),
+              para_must:$(this).find(".para-must").parent().hasClass("checked")
+          }
+          api_para.push(api_para_li);
+      })
+      //HTTP请求方式
+      var api_demo = $("#api-demo").val();
+
+      var data = {
+          api_name    : api_name,
+          api_type    : api_type,
+          api_desc    : api_desc,
+          api_url     : api_url,
+          api_request : api_request,
+          api_para    : JSON.stringify(api_para),
+          api_demo    : api_demo
+      }
+      console.log(data);
+  })
+
   //请求该api接口
   $(function(){
     $('.check input').iCheck({
