--- a/views/app.ejs
+++ b/views/app.ejs
@@ -25,7 +25,7 @@
       <div class="logo">APIMANAGE</div>
     </a>
     <div class="icon">
-      <a href="#intro">API介绍</a>
+        <label class="icon-item"><a href="#intro">API介绍</a></label>
       <label class="icon-item"><a href="#add">添加API</a></label>
     </div>
   </div>
@@ -39,7 +39,10 @@
             </ul>
         </div>
         <div class="col-sm-10 api-content">
-            <section class="sec-content apiactive" id="add" style="display:block">
+            <section class="sec-content apiactive" id="intro" style="display:block">
+                <h1 class="sec-title">平台介绍</h1>
+            </section>
+            <section class="sec-content" id="add">
                 <p>API名称:</p>
                 <div class="code-content">
                     <input type="text" name="api_name" id="api-name" placeholder="获取XX信息">
@@ -48,9 +51,6 @@
                 <div class="code-content">
                     <input type="text" name="app_type" id="api-type" placeholder="轮播图API">
                     <div class="type-list">
-                        <!--<div class="type-li">轮播图</div>-->
-                        <!--<div class="type-li">轮播图</div>-->
-                        <!--<div class="type-li">轮播图</div>-->
                     </div>
                 </div>
                 <p>描述:</p>
@@ -215,7 +215,7 @@
              success:function(result){
                  //获取当前项目名称
                  var data = result.data;
-                 // $(".logo").text(data.app_name);
+                 $("#intro").append("<p>"+data.app_desc+"</p>");
              },
              error:function(error){
                  alert(error.message);
