--- a/public/css/index.css
+++ b/public/css/index.css
@@ -95,3 +95,16 @@
   .modal-body label{
     font-weight: inherit;
   }
+
+  .icon-set{
+      position: absolute;
+      font-size: 24px;
+      right: 10px;
+      top: 5px;
+      opacity: 0.3;
+      z-index: 2;
+  }
+
+  .icon-set:hover{
+      opacity: 1;
+  }
