--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,30 +22,58 @@
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <form action="" id="form">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">创建项目</h4>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label for="exampleInputEmail1">新项目名称</label>
-            <input type="text" class="form-control" name="app_name" id="appname">
+      <form action="" id="form">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">创建项目</h4>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <label for="exampleInputEmail1">新项目名称</label>
+                <input type="text" class="form-control" name="app_name" id="appname">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">项目描述</label>
+                <textarea class="form-control" rows="3" name="app_desc" id="appdesc"></textarea>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+              <button type="button" class="btn btn-primary" id="create">创建</button>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">项目描述</label>
-            <textarea class="form-control" rows="3" name="app_desc" id="appdesc"></textarea>
+        </div>
+      </form>
+  </div>
+
+  <!-- editModal -->
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
+      <form action="" id="editForm">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="myModalLabel">编辑项目</h4>
+                  </div>
+                  <div class="modal-body">
+                      <div class="form-group">
+                          <label for="exampleInputEmail1">项目名称</label>
+                          <input type="text" class="form-control" name="edit_app_name" id="edit_app_name">
+                      </div>
+                      <div class="form-group">
+                          <label for="exampleInputEmail1">项目描述</label>
+                          <textarea class="form-control" rows="3" name="edit_app_desc" id="edit_app_desc"></textarea>
+                      </div>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                      <button type="button" class="btn btn-primary" id="create">更改</button>
+                  </div>
+              </div>
           </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-          <button type="button" class="btn btn-primary" id="create">创建</button>
-        </div>
-      </div>
-    </div>
-  </form>
+      </form>
   </div>
 <% include footer.ejs %>
 <script>
@@ -69,6 +97,8 @@
     })
   })
 
+  var appList = [];
+
   $(function(){
     //获取项目列表
     var data = {};
@@ -83,6 +113,7 @@
           list+='<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12"><div class="api-item"><div class="api-item-meta" data-id="'+data[i].objectId+'">'+data[i].app_name+'</div><i class="iconfont icon-set"></i></div></div>';
         }
         $(".app-content").empty().append(list);
+        appList = result.data;
       },
       error:function(error){
         alert(error.message);
@@ -100,5 +131,18 @@
   })
 
   //点击设置按钮逻辑
+  $(document).on("click",".icon-set",function(){
+      var id = $(this).prev().attr("data-id");
+      if(id){
+//          window.location.href = "/app?appid="+id;
+          for(var i = 0; i < appList.length;i++){
+              if(appList[i].objectId == id){
+                  $("#edit_app_name").val(appList[i].app_name);
+                  $("#edit_app_desc").val(appList[i].app_desc);
+              }
+          }
+          $('#editModal').modal();
+      }
+  })
 </script>
 </html>
