--- a/public/css/public.css
+++ b/public/css/public.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.useso.com/css?family=Oswald);
+/*@import url(http://fonts.useso.com/css?family=Oswald);*/
 
 html {
     width: 100%;
