--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -21,3 +21,4 @@
 </body>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/public.js"></script>
+<script src="/layer/layer.js"></script>
