--- a/views/app.ejs
+++ b/views/app.ejs
@@ -26,6 +26,9 @@
       width: 150px;
       margin:0 20px;
   }
+  .apimanage_add.apiactive a{
+    color: white !important;
+  }
 </style>
 <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation" id="title">
   <div class="navbar-header page-scroll">
@@ -34,7 +37,7 @@
     </a>
     <div class="icon">
         <label class="icon-item"><a href="#intro">API介绍</a></label>
-      <label class="icon-item"><a href="#add">添加API</a></label>
+      <label class="icon-item apimanage_add"><a href="#apimanage_add">添加API</a></label>
     </div>
   </div>
 </nav>
@@ -50,7 +53,8 @@
             <section class="sec-content apiactive" id="intro" style="display:block">
                 <h1 class="sec-title">平台介绍</h1>
             </section>
-            <section class="sec-content" id="add">
+            <section class="sec-content" id="apimanage_add">
+                <input type="hidden" name="api_id" id="api-id">
                 <p>API名称:</p>
                 <div class="code-content">
                     <input type="text" name="api_name" id="api-name" placeholder="获取XX信息">
@@ -90,7 +94,7 @@
                             <input type="text" class="para-name"  style="width:150px;"  placeholder="参数名">
                             <input type="text" class="para-type"  style="width:150px;"  placeholder="参数类型">
                             <input type="text" class="para-desc"  style="width:150px;"  placeholder="参数描述">
-                            <input type="text" class="para-remark"  style="width:150px;"  placeholder="参数备注">
+                            <input type="text" class="para-remark"  style="width:150px;"  placeholder="参数示例值">
                             <div class="check">
                                 <input type="checkbox" class="para-must"  checked>
                                 <label for="input-1">必须参数</label>
@@ -122,7 +126,7 @@
                 '<input type="text" class="para-name"  style="width:150px;margin-right: 6px" placeholder="参数名">'+
                 '<input type="text" class="para-type"  style="width:150px;margin-right: 6px" placeholder="参数类型">'+
                 '<input type="text" class="para-desc"  style="width:150px;margin-right: 6px" placeholder="参数描述">'+
-                '<input type="text" class="para-remark"  style="width:150px;margin-right: 6px" placeholder="参数备注">'+
+                '<input type="text" class="para-remark"  style="width:150px;margin-right: 6px" placeholder="参数示例值">'+
                 '<div class="check">'+
                 '<input type="checkbox" class="para-must"  checked>'+
                 '<label for="input-1">必须参数</label>'+
@@ -139,9 +143,44 @@
     $(this).parent().remove();
   })
 
+  //创建初始化
+  $(".apimanage_add").on("click",function(){
+    //初始化
+    //设置id
+    $("#api-id").val("");
+    //设置为更改
+    $(".create").text("创建");
+    $("#api-name").val("");
+    $("#api-type").val("");
+    $("#api-desc").val("");
+    $("#api-url").val("");
+    $("#api-request").text("GET");  
+    $("#api-demo").val("");
+    $(".parameter-list").empty();
+    var li = '<div class="parameter-li mt-20">'+
+                '<input type="text" class="para-name"  style="width:150px;margin-right: 6px" placeholder="参数名">'+
+                '<input type="text" class="para-type"  style="width:150px;margin-right: 6px" placeholder="参数类型">'+
+                '<input type="text" class="para-desc"  style="width:150px;margin-right: 6px" placeholder="参数描述">'+
+                '<input type="text" class="para-remark"  style="width:150px;margin-right: 6px" placeholder="参数示例值">'+
+                '<div class="check">'+
+                '<input type="checkbox" class="para-must"  checked>'+
+                '<label for="input-1">必须参数</label>'+
+                '</div>'+
+                '<div class="iconfont icon-x"></div>'+
+                '</div>';
+    $(".parameter-list").append(li);
+    $('.check input').iCheck({
+      checkboxClass: 'icheckbox_square-blue',
+      radioClass: 'iradio-blue'
+    });                
+  })
+
+
   //点击创建生成
   $(".create").on("click",function () {
       //获取API名称
+      var api_id   = $("#api-id").val();
+
       var api_name = $("#api-name").val();
       //API所属类别:
       var api_type = $("#api-type").val();
@@ -169,7 +208,8 @@
       var api_demo = $("#api-demo").val();
 
       var data = {
-          app_id       : id,
+          api_id      : api_id,
+          app_id      : id,
           api_name    : api_name,
           api_type    : api_type,
           api_desc    : api_desc,
@@ -180,13 +220,20 @@
       }
       console.log(data);
       //获取项目列表
-      var url = "/api/add";
+      if(api_id){
+        //更改
+        var url = "/api/edit";
+      }else{
+        //创建
+        var url = "/api/add";
+      }
+      
       var type = "GET";
       sendQuery(url,type,data,{
           success:function(result){
               //获取当前项目名称
               var data = result.data;
-              layer.msg('添加成功', {icon: 1});
+              layer.msg('操作成功', {icon: 1});
               window.location.reload();
               // $(".logo").text(data.app_name);
           },
@@ -197,6 +244,8 @@
   })
 
   var id = '';
+  //项目data
+  var apiList = [];
   //请求该api接口
   $(function(){
     $('.check input').iCheck({
@@ -240,6 +289,7 @@
              success:function(result){
                  //获取当前项目名称
                  var data = result.data;
+                 apiList = data;
                  console.log(data);
                  //遍历数据
                  formateData(data);
@@ -288,15 +338,15 @@
                             '<p>描述:</p>'+
                             '<div class="code-content">'+data[i].api[j].api_desc+'</div>'+
                             '<p>URI:</p>'+
-                            '<div class="code-content">'+data[i].api[j].api_url+'</div>'+
+                            '<div class="code-content api-url">'+data[i].api[j].api_url+'</div>'+
                             '<p>HTTP请求方式</p>'+
-                            '<div class="code-content">'+data[i].api[j].api_request+'</div>'+
+                            '<div class="code-content api-request">'+data[i].api[j].api_request+'</div>'+
                             paraContent+
                             '<p> 调用示例 </p>'+
                             '<div class="code-content">'+ data[i].api[j].api_request +
-                            '<a class="ml-10" href="'+data[i].api[j].api_demo+'" target="_blank">'+data[i].api[j].api_demo+'</a></div>'+
-                            '<p> 返回结果 </p>'+
-                            '<div class="code-content"></div>'+
+                            '<a class="ml-10 api-demo" href="'+data[i].api[j].api_demo+'" target="_blank">'+data[i].api[j].api_demo+'</a></div>'+
+                            '<p> 返回结果 <span class="btn btn-success make ml-10">生成结果</span></p>'+
+                            '<div class="code-content api-result"></div>'+
                             '<div class="btn-content" data-id="'+data[i].api[j].objectId+'">'+
                             '<button class="btn btn-danger btn-delete" type="submit">删除</button>'+
                             '<button class="btn btn-info btn-edit" type="submit">编辑</button>'+
@@ -308,6 +358,48 @@
       }
       $(".menu").empty().append(menu);
   }
+
+  //获取生成结果
+  $(document).on("click",".make",function(){
+    //获取父元素
+    var parent = $(this).parent().parent();
+    var that = this;
+    //获取http请求方式
+    var api_request = parent.find(".api-request").text();
+    //获取调用链接
+    var api_url = parent.find(".api-url").text();
+    //获取请求链接
+    var para = {}
+    var id = parent.attr("id");
+    for(var i = 0; i < apiList.length;i++){
+      for(var j = 0; j < apiList[i].api.length;j++){
+        if(apiList[i].api[j].objectId == id){
+          var api_para = apiList[i].api[j].api_para;
+          console.log(api_para);
+          for(var k = 0; k < api_para.length; k++){
+            para[api_para[k].para_name] = api_para[k].para_remark;
+          }   
+        }
+      }
+    }
+    console.log(api_url);
+    console.log(para);
+
+    //判断是什么请求
+    var url = api_url;
+    var type = api_request;
+    sendQuery(url,type,para,{
+      success:function(result){
+        //获取当前项目名称
+        var data = result.data;
+        layer.msg('获取成功', {icon: 1});
+        parent.children(".api-result").text(result);
+      },
+      error:function(error){
+        layer.msg(error.message, {icon: 2});
+      }
+    })
+  })
 
   $(document).on("click",".btn-delete",function(){
       var that = this;
@@ -341,6 +433,81 @@
       $(".layui-layer-msg").css({
           "width":"180px;"
       })
+  })
+
+  $(document).on("click",".btn-edit",function(){
+      //获取id
+      var id = $(this).parent().attr("data-id");
+      //遍历
+      if(id){
+//          window.location.href = "/app?appid="+id;
+          for(var i = 0; i < apiList.length;i++){
+            for(var j = 0; j < apiList[i].api.length;j++){
+              if(apiList[i].api[j].objectId == id){
+                  // $("#app_id").val(id);
+                  // $("#edit_app_name").val(appList[i].app_name);
+                  // $("#edit_app_desc").val(appList[i].app_desc);
+
+                  //设置id
+                  $("#api-id").val(id);
+
+                  //设置为更改
+                  $(".create").text("更改");
+
+                  //获取api名称
+                  var api_name = apiList[i].api[j].api_name;
+                  $("#api-name").val(api_name);
+
+                  //获取API所属类别
+                  var api_type = apiList[i].api[j].api_type;
+                  $("#api-type").val(api_type);
+
+                  //描述:
+                  var api_desc = apiList[i].api[j].api_desc;
+                  $("#api-desc").val(api_desc);
+
+                  //URI:
+                  var api_url = apiList[i].api[j].api_url;
+                  $("#api-url").val(api_url);
+
+                  //HTTP请求方式
+                  var api_request = apiList[i].api[j].api_request;
+                  $("#api-request").text(api_request);  
+
+                  //调用示例
+                  var api_demo = apiList[i].api[j].api_demo;
+                  $("#api-demo").val(api_demo);    
+
+                  var api_para = apiList[i].api[j].api_para;
+                  console.log(api_para);
+                  if(api_para.length){
+                    $(".parameter-list").empty();
+                  }
+                  for(var k = 0; k < api_para.length; k++){
+                    var li = '<div class="parameter-li mt-20">'+
+                              '<input type="text" class="para-name"  style="width:150px;margin-right: 6px" placeholder="参数名" value="'+api_para[k].para_name+'">'+
+                              '<input type="text" class="para-type"  style="width:150px;margin-right: 6px" placeholder="参数类型" value="'+api_para[k].para_type+'">'+
+                              '<input type="text" class="para-desc"  style="width:150px;margin-right: 6px" placeholder="参数描述" value="'+api_para[k].para_desc+'">'+
+                              '<input type="text" class="para-remark"  style="width:150px;margin-right: 6px" placeholder="参数示例值" value="'+api_para[k].para_remark+'">'+
+                              '<div class="check">'+
+                              '<input type="checkbox" class="para-must" '+(api_para[k].para_must ? "checked":"")+'>'+
+                              '<label for="input-1">必须参数</label>'+
+                              '</div>'+
+                              '<div class="iconfont icon-x"></div>'+
+                              '</div>';
+                      console.log(li);
+                      $(".parameter-list").append(li);
+                      $('.check input').iCheck({
+                          checkboxClass: 'icheckbox_square-blue',
+                          radioClass: 'iradio-blue'
+                      });
+                  }   
+              }
+            }   
+          }
+          $(".sec-content").hide();
+          $("#apimanage_add").show();
+      }
   })
 
   //提交表单
